feat: model 접미사 추가 및 start discussion 비니지스 로직 변경
