# internal/server/handler/group_handler.go
@@ -229,8 +229,8 @@ func (h GroupHandler) LeaveGroup(c *fiber.Ctx) error {
 //	@Summary	모임 토론 시작 ✅
 //	@Accept		json
 //	@Produce	json
-//	@Param		StartDiscussionRequest	body	domain.StartDiscussionRequest	true	"토론 시작할 모임 정보"
-//	@Success	204
+//	@Param		StartDiscussionRequest	body		domain.StartDiscussionRequest	true	"토론 시작 정보"
+//	@Success	200						{object}	domain.StartDiscussionResponse	"모임 토론 정보"
 //	@Router		/groups/start-discussion [post]
 //	@Security	BearerAuth
 func (h GroupHandler) StartDiscussion(c *fiber.Ctx) error {
